update plugin versions